src/test/deca/syntax/valid/ourTests/test_cast_float.deca
// Cast valide : conversion d'un entier en float.
{
    float x = (float) (1); 
    // Résultat attendu : x == 1.0 (float)
}