src/test/deca/syntax/invalid/ourTests/test_cast_without_par.deca
{
    float x, y=(float)1;
}